mc for global feature, add dict in bert

--- a/EMO/ROBERTA.ipynb
+++ b/EMO/ROBERTA.ipynb
@@ -341,6 +341,7 @@
         "from torch.nn import BCEWithLogitsLoss\n",
         "import pandas as pd\n",
         "import numpy as np\n",
+        "from sklearn.preprocessing import StandardScaler\n",
         "from transformers import AutoTokenizer, AutoModelForSequenceClassification, AutoModel\n",
         "from transformers import TrainingArguments, Trainer, TrainerCallback, EarlyStoppingCallback\n",
         "from transformers import BertPreTrainedModel, BertModel\n",
@@ -829,6 +830,18 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def scandar_scalar_features(features):\n",
+        "  scaler = StandardScaler()\n",
+        "  scaler.fit(features)\n",
+        "  return scaler.transform(features)"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 16,
       "metadata": {
         "execution": {
@@ -846,6 +859,17 @@
         "features_train =  np.array(train_df[GLOBAL_FEATURES_NAMES])\n",
         "features_val =  np.array(val_df[GLOBAL_FEATURES_NAMES])\n",
         "features_dev =  np.array(dev_df[GLOBAL_FEATURES_NAMES])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "features_train =  scandar_scalar_features(features_train)\n",
+        "features_val =  scandar_scalar_features(features_val)\n",
+        "features_dev =  scandar_scalar_features(features_dev)"
       ]
     },
     {
@@ -1260,6 +1284,7 @@
         "                                                     problem_type = \"multi_label_classification\",\n",
         "                                                     num_labels=NUM_LABELS,\n",
         "                                                     classifier_dropout=0.3#,\n",
+        "                                                     #num_extra_dims=DIM_EXTRA_FEATURES_GLOBAL,\n",
         "                                                     #last_cls = 4,\n",
         "                                                     #mean_last_cls = True\n",
         "                                                     )"
@@ -1309,7 +1334,7 @@
         "                    targets=y_train\n",
         "                    #EMO_lexicon=EMO_lexicon_train_dict,\n",
         "                    #EMP_lexicon=EMP_lexicon_train_dict,\n",
-        "                    #global_features = features_val,\n",
+        "                    #global_features = features_train,\n",
         "                    #local_emotions = True,\n",
         "                    #local_empathy = True,\n",
         "                    #local_distress = True\n",
@@ -1336,7 +1361,7 @@
         "                    targets=y_dev\n",
         "                    #EMO_lexicon=EMO_lexicon_train_dict,\n",
         "                    #EMP_lexicon=EMP_lexicon_train_dict,\n",
-        "                    #global_features = features_val,\n",
+        "                    #global_features = features_dev,\n",
         "                    #local_emotions = True,\n",
         "                    #local_empathy = True,\n",
         "                    #local_distress = True\n",
