splitted prompt in df

--- a/prova.ipynb
+++ b/prova.ipynb
@@ -2,6 +2,126 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     /Users/irenetesta/nltk_data...\n",
+      "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from nrclex import NRCLex\n",
+    "import nltk\n",
+    "\n",
+    "nltk.download('punkt')\n",
+    "\n",
+    "def generate_prompt(essay, gender, education, ethnicity, age, income, empathy, distress):\n",
+    "    if gender == 1: gender_str = \"male\"\n",
+    "    else: gender_str = \"female\"\n",
+    "\n",
+    "    if education == 1: education_str = \"with less than a high school diploma\"\n",
+    "    elif education == 2: education_str = \"with a high school diploma\"\n",
+    "    elif education == 3: education_str = \"went to a technical/vocational school\"\n",
+    "    elif education == 4: education_str = \"went to college\"\n",
+    "    elif education == 5: education_str = \"with a two year associate degree\"\n",
+    "    elif education == 6: education_str = \"with a four year bachelor's degree\"\n",
+    "    else: education_str = \"postgradute or with a professional degree\"\n",
+    "\n",
+    "    if ethnicity == 1: ethnicity_str = \" white\"\n",
+    "    elif ethnicity == 2: ethnicity_str = \" hispanic or latino\"\n",
+    "    elif ethnicity == 3: ethnicity_str = \" black or african american\"\n",
+    "    elif ethnicity == 4: ethnicity_str = \" native american or american indian\"\n",
+    "    elif ethnicity == 5: ethnicity_str = \" asian/pacific islander\"\n",
+    "    else: ethnicity_str = \"\"\n",
+    "\n",
+    "    text_prompt_bio = \"An essay written by a {} years old{} {}, {}, with an income of {}$.\".format(\n",
+    "        age, ethnicity_str,\n",
+    "        gender_str,\n",
+    "        education_str,\n",
+    "        income\n",
+    "        )\n",
+    "    \n",
+    "    if empathy is not None:\n",
+    "        if empathy < 3: empathy_value = \"low\"\n",
+    "        elif empathy < 5: empathy_value = \"medium\"\n",
+    "        else: empathy_value = \"high\"\n",
+    "        if distress < 3: distress_value = \"low\"\n",
+    "        elif distress < 5: distress_value = \"medium\"\n",
+    "        else: distress_value = \"high\"\n",
+    "        text_prompt_emp = \"The essay expresses {} empathy and {} distress levels.\".format(\n",
+    "            empathy_value,\n",
+    "            distress_value\n",
+    "            )\n",
+    "\n",
+    "    emotions = NRCLex(essay).top_emotions\n",
+    "    if (sum(np.array([emo[1] for emo in emotions])))==0:\n",
+    "        emotions = {'neutral': 1}\n",
+    "    n_emo = len(emotions)\n",
+    "    emo_string = \"\"\n",
+    "    for i, emo in enumerate(emotions):\n",
+    "        emo_string += emo[0]\n",
+    "        if i < n_emo-1:\n",
+    "            emo_string += \", \"\n",
+    "    text_prompt_emo = \" The top emotions expressed in the essay are: {}.\".format(emo_string)\n",
+    "    \n",
+    "    return text_prompt_bio, text_prompt_emp, text_prompt_emo\n",
+    "\n",
+    "def add_prompt(dataframe):\n",
+    "    dataframe[\"prompt_bio\"] = \"\"\n",
+    "    dataframe[\"prompt_emp\"] = \"\"\n",
+    "    dataframe[\"prompt_emo\"] = \"\"\n",
+    "    for idx, row in dataframe.iterrows():\n",
+    "        bio_prompt, emp_prompt, emo_prompt = generate_prompt(\n",
+    "            row['essay'],\n",
+    "            row['gender'],\n",
+    "            row['education'],\n",
+    "            row['race'],\n",
+    "            row['age'],\n",
+    "            row['income'],\n",
+    "            row['empathy'] if 'empathy' in row else None,\n",
+    "            row['distress'] if 'empathy' in row else None\n",
+    "            )\n",
+    "        dataframe.at[idx, \"prompt_bio\"] = bio_prompt\n",
+    "        dataframe.at[idx, \"prompt_emp\"] = emp_prompt\n",
+    "        dataframe.at[idx, \"prompt_emo\"] = emo_prompt\n",
+    "    return dataframe\n",
+    "\n",
+    "year=23\n",
+    "\n",
+    "TRAIN = f\"datasets/WASSA{year}_essay_level_original_internal_train_preproc.tsv\"\n",
+    "VAL = f\"datasets/WASSA{year}_essay_level_original_internal_val_preproc.tsv\"\n",
+    "DEV = f\"datasets/WASSA{year}_essay_level_dev_preproc.tsv\"\n",
+    "\n",
+    "train_df = pd.read_csv(TRAIN, sep='\\t')\n",
+    "val_df = pd.read_csv(VAL, sep='\\t')\n",
+    "dev_df = pd.read_csv(DEV, sep='\\t')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_train = add_prompt(train_df)\n",
+    "new_train.to_csv(f\"datasets/WASSA{year}_essay_level_original_internal_train_preproc_prompt.tsv\", index=False, sep='\\t')\n",
+    "new_val = add_prompt(val_df)\n",
+    "new_val.to_csv(f\"datasets/WASSA{year}_essay_level_original_internal_val_preproc_prompt.tsv\", index=False, sep='\\t')\n",
+    "new_dev = add_prompt(dev_df)\n",
+    "new_dev.to_csv(f\"datasets/WASSA{year}_essay_level_dev_preproc_prompt.tsv\", index=False, sep='\\t')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -159,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
