emo model final

--- a/EMO/ROBERTA_FINAL.ipynb
+++ b/EMO/ROBERTA_FINAL.ipynb
@@ -502,9 +502,9 @@
         "\n",
         "        essay_id = self.essay_id[index]\n",
         "\n",
-        "\n",
         "        if self.prompt is not None:\n",
-        "          prompt = str(self.prompt[index])\n",
+        "          for i, p in enumearate(self.prompt[index]):\n",
+        "            prompt += \" \" + str(p)\n",
         "\n",
         "        text = essay\n",
         "        text_pair = None\n",
@@ -512,7 +512,7 @@
         "          text_pair = prompt\n",
         "        else:\n",
         "          if self.prompt is not None:\n",
-        "            text += \" \" + prompt\n",
+        "            text += prompt\n",
         "\n",
         "        inputs = self.tokenizer.encode_plus(\n",
         "            text=essay,\n",
@@ -770,6 +770,26 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#@title Prompt\n",
+        "bio_prompt = True #@param {type:\"boolean\"}\n",
+        "emo_prompt = True #@param {type:\"boolean\"}\n",
+        "empathy_prompt = True #@param {type:\"boolean\"}\n",
+        "prompt = []\n",
+        "prompt_names = [\"prompt_bio\", \"prompt_emp\", \"prompt_emo\"]\n",
+        "if bio_prompt:\n",
+        "    prompt.append(prompt_names[0])\n",
+        "if empathy_prompt:\n",
+        "    prompt.append(prompt_names[1])\n",
+        "if emo_prompt:\n",
+        "    prompt.append(prompt_names[2])"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 16,
       "metadata": {
         "cellView": "form",
@@ -862,6 +882,24 @@
         "features_train =  scandar_scalar_features(features_train)\n",
         "features_val =  scandar_scalar_features(features_val)\n",
         "features_dev =  scandar_scalar_features(features_dev)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Prompt"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "prompt_train = np.array(train_df[prompt])\n",
+        "prompt_val = np.array(val_df[prompt])\n",
+        "prompt_dev = np.array(dev_df[prompt])"
       ]
     },
     {
@@ -1528,7 +1566,7 @@
       "source": [
         "train_set = WASSADataset(tokenizer=tokenizer,\n",
         "                    essay=train_df.essay,\n",
-        "                    prompt=train_df.prompt,\n",
+        "                    prompt=train_prompt,\n",
         "                    #sep=True,\n",
         "                    essay_id = train_df.essay_id,\n",
         "                    targets=y_train\n",
@@ -1542,7 +1580,7 @@
         "\n",
         "val_set = WASSADataset(tokenizer=tokenizer,\n",
         "                    essay=val_df.essay,\n",
-        "                    prompt=val_df.prompt,\n",
+        "                    prompt=val_prompt,\n",
         "                    #sep=True,\n",
         "                    essay_id = val_df.essay_id,\n",
         "                    targets=y_val\n",
@@ -1557,7 +1595,7 @@
         "                    essay=dev_df.essay,\n",
         "                    prompt=dev_df.prompt,\n",
         "                    #sep=True,\n",
-        "                    essay_id = dev_df.essay_id,\n",
+        "                    essay_id = dev_essay_id,\n",
         "                    targets=y_dev\n",
         "                    #EMO_lexicon=EMO_lexicon_train_dict,\n",
         "                    #EMP_lexicon=EMP_lexicon_train_dict,\n",
