--- a/EMO_MODEL.ipynb
+++ b/EMO_MODEL.ipynb
@@ -506,9 +506,9 @@
         "\n",
         "        essay_id = self.essay_id[index]\n",
         "\n",
-        "\n",
         "        if self.prompt is not None:\n",
-        "          prompt = str(self.prompt[index])\n",
+        "          for i, p in enumearate(self.prompt[index]):\n",
+        "            prompt += \" \" + str(p)\n",
         "\n",
         "        text = essay\n",
         "        text_pair = None\n",
@@ -516,7 +516,7 @@
         "          text_pair = prompt\n",
         "        else:\n",
         "          if self.prompt is not None:\n",
-        "            text += \" \" + prompt\n",
+        "            text += prompt\n",
         "\n",
         "        inputs = self.tokenizer.encode_plus(\n",
         "            text=essay,\n",
@@ -713,6 +713,23 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#@title Model Class\n",
+        "MODEL_CLASS = \"BertForSequenceClassification\" #@param [\"BertForSequenceClassification\", \"RobertaForSequenceClassification\"]\n",
+        "model_id = 'Bert' #@param {type:\"string\"}\n",
+        "model_name = 'bert-base' #@param [\"bert-base\", \"roberta-base\"]\n",
+        "\n",
+        "if MODEL_CLASS == \"BertForSequenceClassification\":\n",
+        "    MODEL_CLASS = BertForSequenceClassification  \n",
+        "else:\n",
+        "    MODEL_CLASS = RobertaForSequenceClassification"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 12,
       "metadata": {
         "cellView": "form",
@@ -773,6 +790,26 @@
         "if empathy_count_local: local_features_names.append('empathy')\n",
         "if distress_count_local: local_features_names.append('distress')\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#@title Prompt\n",
+        "bio_prompt = True #@param {type:\"boolean\"}\n",
+        "emo_prompt = True #@param {type:\"boolean\"}\n",
+        "empathy_prompt = True #@param {type:\"boolean\"}\n",
+        "prompt = []\n",
+        "prompt_names = [\"prompt_bio\", \"prompt_emp\", \"prompt_emo\"]\n",
+        "if bio_prompt:\n",
+        "    prompt.append(prompt_names[0])\n",
+        "if empathy_prompt:\n",
+        "    prompt.append(prompt_names[1])\n",
+        "if emo_prompt:\n",
+        "    prompt.append(prompt_names[2])"
       ]
     },
     {
@@ -870,6 +907,24 @@
         "features_train =  scandar_scalar_features(features_train)\n",
         "features_val =  scandar_scalar_features(features_val)\n",
         "features_dev =  scandar_scalar_features(features_dev)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Prompt"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "prompt_train = np.array(train_df[prompt])\n",
+        "prompt_val = np.array(val_df[prompt])\n",
+        "prompt_dev = np.array(dev_df[prompt])"
       ]
     },
     {
@@ -975,19 +1030,19 @@
       ],
       "source": [
         "model_config = {\n",
-        "    'model_id': 'CustomBert',\n",
-        "    'tokenizer_name': model_type.get('bert-base'),\n",
-        "    'model_name': model_type.get('bert-base'),\n",
-        "    'train_batch_size': 8,\n",
-        "    'val_batch_size': 8,\n",
-        "    'learning_rate': 5e-5,\n",
-        "    'weight_decay': 0,\n",
-        "    'epochs': 30,\n",
-        "    'seed': 42,\n",
-        "    'patience': 5,\n",
-        "    'early_stopping_threshold': 0,\n",
-        "    'weighted_loss': True\n",
-        "}\n",
+        "        'model_id': model_id,\n",
+        "        'tokenizer_name': model_type.get(model_name),\n",
+        "        'model_name': model_type.get(model_name),\n",
+        "        'train_batch_size': 8,\n",
+        "        'val_batch_size': 8,\n",
+        "        'learning_rate': 5e-5,\n",
+        "        'weight_decay': 0,\n",
+        "        'epochs': 30,\n",
+        "        'seed': 42,\n",
+        "        'patience': 5,\n",
+        "        'early_stopping_threshold': 0,\n",
+        "        'weighted_loss': True\n",
+        "    }\n",
         "\n",
         "path_tosave = f\"{model_config['model_id']}\"\n",
         "!mkdir $path_tosave"
@@ -1105,7 +1160,7 @@
         "        x = self.out_proj(x)\n",
         "        return x\n",
         "\n",
-        "class CustomSequenceClassification(BertForSequenceClassification):\n",
+        "class CustomSequenceClassification(MODEL_CLASS):\n",
         "\n",
         "    def __init__(self, config, num_extra_dims=0, local_features_name=None, loss_weights=None, last_cls = 1, mean_last_cls = False):\n",
         "        super().__init__(config)\n",
@@ -1115,7 +1170,10 @@
         "        self.loss_weights = loss_weights\n",
         "        self.last_cls = last_cls\n",
         "        self.mean_last_cls = mean_last_cls\n",
-        "        self.bert = BertModel(config)\n",
+        "        if MODEL_CLASS == BertForSequenceClassification:\n",
+        "          self.pretrained_model = BertModel(config)\n",
+        "        else:\n",
+        "          self.pretrained_model = RobertaModel(config)\n",
         "        classifier_dropout = (\n",
         "            config.classifier_dropout if config.classifier_dropout is not None else config.hidden_dropout_prob\n",
         "        )\n",
@@ -1147,7 +1205,7 @@
         "\n",
         "        return_dict = return_dict if return_dict is not None else self.config.use_return_dict\n",
         "\n",
-        "        outputs = self.bert(\n",
+        "        outputs = self.pretrained_model(\n",
         "            input_ids,\n",
         "            attention_mask=attention_mask,\n",
         "            token_type_ids=token_type_ids,\n",
@@ -1328,7 +1386,7 @@
       "source": [
         "train_set = WASSADataset(tokenizer=tokenizer,\n",
         "                    essay=train_df.essay,\n",
-        "                    #prompt=train_df.prompt,\n",
+        "                    #prompt=train_prompt,\n",
         "                    #sep=True,\n",
         "                    essay_id = train_df.essay_id,\n",
         "                    targets=y_train,\n",
@@ -1342,7 +1400,7 @@
         "\n",
         "val_set = WASSADataset(tokenizer=tokenizer,\n",
         "                    essay=val_df.essay,\n",
-        "                    #prompt=val_df.prompt,\n",
+        "                    #prompt=val_prompt,\n",
         "                    #sep=True,\n",
         "                    essay_id = val_df.essay_id,\n",
         "                    targets=y_val,\n",
@@ -1355,7 +1413,7 @@
         "                )\n",
         "dev_set = WASSADataset(tokenizer=tokenizer,\n",
         "                    essay=dev_df.essay,\n",
-        "                    #prompt=dev_df.prompt,\n",
+        "                    #prompt=dev_prompt,\n",
         "                    #sep=True,\n",
         "                    essay_id = dev_df.essay_id,\n",
         "                    targets=y_dev,\n",
@@ -1687,7 +1745,11 @@
         "for metric in metrics:\n",
         "  eval_metrics_values.append([log.get(metric) for log in train_logs if log.get(metric) is not None])\n",
         "train_epochs = [log.get('epoch') for log in train_logs if log.get('loss') is not None]\n",
-        "eval_epochs = [log.get('epoch') for log in train_logs if log.get('eval_loss') is not None]"
+        "eval_epochs = [log.get('epoch') for log in train_logs if log.get('eval_loss') is not None]\n",
+        "\n",
+        "\n",
+        "best_epoch_train = np.argmax([(log.get('eval_macro_f1'), log.get('epoch'))for log in train_logs if log.get('eval_loss') is not None])\n",
+        "best_counter_val = np.argmax([log.get('eval_macro_f1')for log in train_logs if log.get('eval_loss') is not None])"
       ]
     },
     {
