--- a/EMO_MODEL.ipynb
+++ b/EMO_MODEL.ipynb
@@ -624,9 +624,10 @@
       },
       "outputs": [],
       "source": [
-        "TRAIN_DATA = f\"{repo_path}{branch}/datasets/WASSA23_essay_level_original_internal_train_preproc.tsv\"\n",
-        "VAL_DATA = f\"{repo_path}{branch}/datasets/WASSA23_essay_level_original_internal_val_preproc.tsv\"\n",
-        "DEV_DATA = f\"{repo_path}{branch}/datasets/WASSA23_essay_level_dev_preproc.tsv\""
+        "TRAIN_DATA = f\"{repo_path}{branch}/datasets/WASSA23_essay_level_original_internal_train_preproc_prompt.tsv\"\n",
+        "VAL_DATA = f\"{repo_path}{branch}/datasets/WASSA23_essay_level_original_internal_val_preproc_prompt.tsv\"\n",
+        "DEV_DATA = f\"{repo_path}{branch}/datasets/WASSA23_essay_level_dev_preproc_prompt.tsv\"\n",
+        "#TODO: cambiare path quando abbiamo rifatto i dataset"
       ]
     },
     {
