FIX standard scaler fit

--- a/EMO_MODEL.ipynb
+++ b/EMO_MODEL.ipynb
@@ -872,42 +872,15 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "def scandar_scalar_features(features):\n",
-        "  scaler = StandardScaler()\n",
-        "  scaler.fit(features)\n",
-        "  return scaler.transform(features)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 16,
-      "metadata": {
-        "execution": {
-          "iopub.execute_input": "2023-07-11T19:10:06.073234Z",
-          "iopub.status.busy": "2023-07-11T19:10:06.072968Z",
-          "iopub.status.idle": "2023-07-11T19:10:06.084418Z",
-          "shell.execute_reply": "2023-07-11T19:10:06.083491Z",
-          "shell.execute_reply.started": "2023-07-11T19:10:06.073203Z"
-        },
-        "id": "RDqlrqx6-gDt",
-        "trusted": true
-      },
-      "outputs": [],
-      "source": [
-        "features_train =  np.array(train_df[GLOBAL_FEATURES_NAMES])\n",
-        "features_val =  np.array(val_df[GLOBAL_FEATURES_NAMES])\n",
-        "features_dev =  np.array(dev_df[GLOBAL_FEATURES_NAMES])"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "features_train =  scandar_scalar_features(features_train)\n",
-        "features_val =  scandar_scalar_features(features_val)\n",
-        "features_dev =  scandar_scalar_features(features_dev)"
+        "scaler_bio = StandardScaler()\n",
+        "scaler_bio.fit(np.array(train_df[GLOBAL_FEATURES_NAMES]))\n",
+        "\n",
+        "def scandar_scalar_bio_features(features):\n",
+        "  return scaler_bio.transform(features)\n",
+        "\n",
+        "features_train =  scandar_scalar_bio_features(np.array(train_df[GLOBAL_FEATURES_NAMES]))\n",
+        "features_val =  scandar_scalar_bio_features(np.array(val_df[GLOBAL_FEATURES_NAMES]))\n",
+        "features_dev =  scandar_scalar_bio_features(np.array(dev_df[GLOBAL_FEATURES_NAMES]))"
       ]
     },
     {
