--- a/EMO_MODEL.ipynb
+++ b/EMO_MODEL.ipynb
@@ -872,15 +872,15 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "scaler_bio = StandardScaler()\n",
-        "scaler_bio.fit(np.array(train_df[GLOBAL_FEATURES_NAMES]))\n",
+        "scaler = StandardScaler()\n",
+        "scaler.fit(np.array(train_df[GLOBAL_FEATURES_NAMES]))\n",
         "\n",
-        "def scandar_scalar_bio_features(features):\n",
-        "  return scaler_bio.transform(features)\n",
+        "def scandar_scalar_features(features):\n",
+        "  return scaler.transform(features)\n",
         "\n",
-        "features_train =  scandar_scalar_bio_features(np.array(train_df[GLOBAL_FEATURES_NAMES]))\n",
-        "features_val =  scandar_scalar_bio_features(np.array(val_df[GLOBAL_FEATURES_NAMES]))\n",
-        "features_dev =  scandar_scalar_bio_features(np.array(dev_df[GLOBAL_FEATURES_NAMES]))"
+        "features_train =  scandar_scalar_features(np.array(train_df[GLOBAL_FEATURES_NAMES]))\n",
+        "features_val =  scandar_scalar_features(np.array(val_df[GLOBAL_FEATURES_NAMES]))\n",
+        "features_dev =  scandar_scalar_features(np.array(dev_df[GLOBAL_FEATURES_NAMES]))"
       ]
     },
     {
