--- a/EMO_MODEL.ipynb
+++ b/EMO_MODEL.ipynb
@@ -509,6 +509,7 @@
         "        if self.prompt is not None:\n",
         "          for i, p in enumearate(self.prompt[index]):\n",
         "            prompt += \" \" + str(p)\n",
+        "            print(\"sono in prompt\")\n",
         "\n",
         "        text = essay\n",
         "        text_pair = None\n",
@@ -724,9 +725,9 @@
         "model_name = 'bert-base' #@param [\"bert-base\", \"roberta-base\"]\n",
         "\n",
         "if MODEL_CLASS == \"BertForSequenceClassification\":\n",
-        "    MODEL_CLASS = BertForSequenceClassification  \n",
+        "  MODEL_CLASS = BertForSequenceClassification  \n",
         "else:\n",
-        "    MODEL_CLASS = RobertaForSequenceClassification"
+        "  MODEL_CLASS = RobertaForSequenceClassification"
       ]
     },
     {
@@ -872,15 +873,16 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "scaler = StandardScaler()\n",
-        "scaler.fit(np.array(train_df[GLOBAL_FEATURES_NAMES]))\n",
+        "if len(global_features_names) > 0:\n",
+        "  scaler = StandardScaler()\n",
+        "  scaler.fit(np.array(train_df[GLOBAL_FEATURES_NAMES]))\n",
         "\n",
-        "def scandar_scalar_features(features):\n",
-        "  return scaler.transform(features)\n",
+        "  def scandar_scalar_features(features):\n",
+        "    return scaler.transform(features)\n",
         "\n",
-        "features_train =  scandar_scalar_features(np.array(train_df[GLOBAL_FEATURES_NAMES]))\n",
-        "features_val =  scandar_scalar_features(np.array(val_df[GLOBAL_FEATURES_NAMES]))\n",
-        "features_dev =  scandar_scalar_features(np.array(dev_df[GLOBAL_FEATURES_NAMES]))"
+        "  features_train =  scandar_scalar_features(np.array(train_df[GLOBAL_FEATURES_NAMES]))\n",
+        "  features_val =  scandar_scalar_features(np.array(val_df[GLOBAL_FEATURES_NAMES]))\n",
+        "  features_dev =  scandar_scalar_features(np.array(dev_df[GLOBAL_FEATURES_NAMES]))"
       ]
     },
     {
@@ -1366,7 +1368,7 @@
         "                    targets=y_train,\n",
         "                    #EMO_lexicon=EMO_lexicon_train_dict,\n",
         "                    #EMP_lexicon=EMP_lexicon_train_dict,\n",
-        "                    global_features = features_train,\n",
+        "                    #global_features = features_train,\n",
         "                    #local_emotions = True,\n",
         "                    #local_empathy = True,\n",
         "                    #local_distress = True\n",
@@ -1380,7 +1382,7 @@
         "                    targets=y_val,\n",
         "                    #EMO_lexicon=EMO_lexicon_train_dict,\n",
         "                    #EMP_lexicon=EMP_lexicon_train_dict,\n",
-        "                    global_features = features_val,\n",
+        "                    #global_features = features_val,\n",
         "                    #local_emotions = True,\n",
         "                    #local_empathy = True,\n",
         "                    #local_distress = True\n",
@@ -1393,7 +1395,7 @@
         "                    targets=y_dev,\n",
         "                    #EMO_lexicon=EMO_lexicon_train_dict,\n",
         "                    #EMP_lexicon=EMP_lexicon_train_dict,\n",
-        "                    global_features = features_dev,\n",
+        "                    #global_features = features_dev,\n",
         "                    #local_emotions = True,\n",
         "                    #local_empathy = True,\n",
         "                    #local_distress = True\n",
