add bio and emp prompt in dataset

--- a/BERT.ipynb
+++ b/BERT.ipynb
@@ -506,9 +506,10 @@
         "\n",
         "        essay_id = self.essay_id[index]\n",
         "\n",
-        "\n",
         "        if self.prompt is not None:\n",
-        "          prompt = str(self.prompt[index])\n",
+        "          for i, p in enumearate(self.prompt[index]):\n",
+        "            prompt += \" \" + str(p)\n",
+        "            print(\"sono in prompt\")\n",
         "\n",
         "        text = essay\n",
         "        text_pair = None\n",
@@ -516,7 +517,7 @@
         "          text_pair = prompt\n",
         "        else:\n",
         "          if self.prompt is not None:\n",
-        "            text += \" \" + prompt\n",
+        "            text += prompt\n",
         "\n",
         "        inputs = self.tokenizer.encode_plus(\n",
         "            text=essay,\n",
@@ -777,6 +778,26 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#@title Prompt\n",
+        "bio_prompt = True #@param {type:\"boolean\"}\n",
+        "emo_prompt = True #@param {type:\"boolean\"}\n",
+        "empathy_prompt = True #@param {type:\"boolean\"}\n",
+        "prompt = []\n",
+        "prompt_names = [\"prompt_bio\", \"prompt_emp\", \"prompt_emo\"]\n",
+        "if bio_prompt:\n",
+        "    prompt.append(prompt_names[0])\n",
+        "if empathy_prompt:\n",
+        "    prompt.append(prompt_names[1])\n",
+        "if emo_prompt:\n",
+        "    prompt.append(prompt_names[2])"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 14,
       "metadata": {
         "cellView": "form",
@@ -844,6 +865,24 @@
         "  features_train =  scandar_scalar_features(np.array(train_df[GLOBAL_FEATURES_NAMES]))\n",
         "  features_val =  scandar_scalar_features(np.array(val_df[GLOBAL_FEATURES_NAMES]))\n",
         "  features_dev =  scandar_scalar_features(np.array(dev_df[GLOBAL_FEATURES_NAMES]))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Prompt"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "prompt_train = np.array(train_df[prompt])\n",
+        "prompt_val = np.array(val_df[prompt])\n",
+        "prompt_dev = np.array(dev_df[prompt])"
       ]
     },
     {
