one nb 4 bert and roberta

--- a/BERT.ipynb
+++ b/BERT.ipynb
@@ -714,6 +714,23 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#@title Model Class\n",
+        "MODEL_CLASS_STRING = \"BertForSequenceClassification\" #@param [\"BertForSequenceClassification\", \"RobertaForSequenceClassification\"]\n",
+        "model_id = 'BertBase' #@param {type:\"string\"}\n",
+        "model_name = 'bert-base' #@param [\"bert-base\", \"roberta-base\"]\n",
+        "\n",
+        "if MODEL_CLASS_STRING == \"BertForSequenceClassification\":\n",
+        "  MODEL_CLASS = BertForSequenceClassification  \n",
+        "else:\n",
+        "  MODEL_CLASS = RobertaForSequenceClassification"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 12,
       "metadata": {
         "cellView": "form",
@@ -988,9 +1005,9 @@
       ],
       "source": [
         "model_config = {\n",
-        "    'model_id': 'CustomBert',\n",
-        "    'tokenizer_name': model_type.get('bert-base'),\n",
-        "    'model_name': model_type.get('bert-base'),\n",
+        "    'model_id': model_id,\n",
+        "    'tokenizer_name': model_type.get(model_name),\n",
+        "    'model_name': model_type.get(model_name),\n",
         "    'train_batch_size': 8,\n",
         "    'val_batch_size': 8,\n",
         "    'learning_rate': 5e-5,\n",
@@ -1118,7 +1135,7 @@
         "        x = self.out_proj(x)\n",
         "        return x\n",
         "\n",
-        "class CustomSequenceClassification(BertForSequenceClassification):\n",
+        "class CustomSequenceClassification(MODEL_CLASS):\n",
         "\n",
         "    def __init__(self, config, num_extra_dims=0, local_features_name=None, loss_weights=None, last_cls = 1, mean_last_cls = False):\n",
         "        super().__init__(config)\n",
@@ -1128,7 +1145,10 @@
         "        self.loss_weights = loss_weights\n",
         "        self.last_cls = last_cls\n",
         "        self.mean_last_cls = mean_last_cls\n",
-        "        self.bert = BertModel(config)\n",
+        "        if MODEL_CLASS_STRING == \"BertForSequenceClassification\":\n",
+        "          self.bert = BertModel(config)\n",
+        "        else:\n",
+        "          self.bert = RobertaModel(config)\n",
         "        classifier_dropout = (\n",
         "            config.classifier_dropout if config.classifier_dropout is not None else config.hidden_dropout_prob\n",
         "        )\n",
